@@ -53,7 +53,8 @@ typedef enum DP_BlendMode {
     DP_BLEND_MODE_LUMINOSITY,
     DP_BLEND_MODE_COLOR,
     DP_BLEND_MODE_ALPHA_DARKEN,
-    DP_BLEND_MODE_ALPHA_DARKEN_LERP,
+    DP_BLEND_MODE_COMPARE_DENSITY,
+    DP_BLEND_MODE_GREATER,
     DP_BLEND_MODE_ERASE_LIGHT,
     DP_BLEND_MODE_ERASE_DARK,
     DP_BLEND_MODE_LIGHT_TO_ALPHA,
@@ -77,6 +78,7 @@ typedef enum DP_BlendMode {
     DP_BLEND_MODE_SATURATION_ALPHA,
     DP_BLEND_MODE_LUMINOSITY_ALPHA,
     DP_BLEND_MODE_COLOR_ALPHA,
+    DP_BLEND_MODE_GREATER_ALPHA,
     // The _PRESERVE blend modes are identical to the ones without that suffix.
     // They only exist to track the intended alpha preserve state.
     DP_BLEND_MODE_ERASE_PRESERVE,
