@@ -5,6 +5,7 @@ Unreleased Version 2.3.0-pre
  * Feature: "Clip to layer below" toggle on layers, for people used to that way of alpha preserving. Will be loaded from and saved to PSD files.
  * Fix: Change the dptxt recording format to use JSON to represent message bodies instead of a bespoke format that sometimes doesn't round-trip properly.
  * Feature: "Inherit alpha" toggle on layers and "preserve alpha" toggle on tools, for people used to that way of alpha preserving from Krita. You can toggle automatic alpha preserverance in the user interface preferences.
+ * Feature: "Greater Density" blend mode. Works like "Greater" in Krita, similar to the Marker in SAI and "Compare Density" in CSP. Lets you draw on a layer and only draw where it increases opacity. Thanks Annoy and cromachina for suggesting.
 
 Unreleased Version 2.2.3-pre
  * Fix: Disable audio playback under 32 bit Windows, since it just crashes.
